<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/list_item_game_textview"
    android:padding="10dp"
    android:background="#00000000"
    android:visibility="visible">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_opponent_cards"
        android:id="@+id/textView1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="21sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:visibility="visible"
        android:textColor="#ff151fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_of_pile"
        android:id="@+id/textView2"
        android:textSize="21sp"
        android:visibility="visible"
        android:layout_below="@+id/textView1"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_top_pile"
        android:id="@+id/textView_top_pile"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:background="#ff2419ff"
        android:textSize="28sp"
        android:gravity="center"
        android:clickable="false"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cards_rem"
        android:id="@+id/textView_cards_rem"
        android:textSize="21sp"
        android:visibility="visible"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/button_3"
        android:layout_marginTop="1dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cards_rem_2"
        android:id="@+id/textView4"
        android:textSize="21sp"
        android:visibility="visible"
        android:layout_below="@+id/textView_cards_rem"
        android:layout_alignLeft="@+id/textView_cards_rem"
        android:layout_alignStart="@+id/textView_cards_rem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_hand"
        android:id="@+id/textView"
        android:textSize="21sp"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="4dp"
        android:visibility="visible"
        android:layout_below="@+id/textView_top_pile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_hand_2"
        android:id="@+id/textView5"
        android:paddingLeft="5dp"
        android:paddingRight="10dp"
        android:textSize="21sp"
        android:paddingTop="1dp"
        android:paddingBottom="5dp"
        android:visibility="visible"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/button_1"
        android:layout_alignStart="@+id/button_1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_1"
        android:id="@+id/button_1"
        android:textSize="28sp"
        android:padding="10dp"
        android:background="#ffff1e14"
        android:gravity="center"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="button_1_click"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:layout_alignTop="@+id/button_2"
        android:layout_alignLeft="@+id/button_5"
        android:layout_alignStart="@+id/button_5"
        android:layout_marginBottom="10dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_2"
        android:id="@+id/button_2"
        android:background="#fffffd09"
        android:padding="10dp"
        android:textSize="28sp"
        android:gravity="center"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="button_2_click"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView_top_pile"
        android:layout_alignStart="@+id/textView_top_pile"
        android:layout_marginBottom="10dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_3"
        android:id="@+id/button_3"
        android:padding="10dp"
        android:textSize="28sp"
        android:gravity="center"
        android:background="#ff0fff00"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="button_3_click"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:layout_alignTop="@+id/button_2"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginBottom="10dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_4"
        android:id="@+id/button_4"
        android:background="#ffff1e14"
        android:textSize="28sp"
        android:textIsSelectable="false"
        android:gravity="center"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="button_4_click"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:enabled="true"
        android:layout_alignTop="@+id/button_3"
        android:layout_toRightOf="@+id/button_3"
        android:layout_toEndOf="@+id/button_3"
        android:layout_marginLeft="10sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_5"
        android:id="@+id/button_5"
        android:gravity="center"
        android:textSize="28sp"
        android:background="#ff0fff00"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="button_5_click"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:layout_below="@+id/button_1"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="10dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_6"
        android:id="@+id/button_6"
        android:gravity="center"
        android:textSize="28sp"
        android:background="#ff2419ff"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="button_6_click"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:layout_below="@+id/button_2"
        android:layout_alignLeft="@+id/button_2"
        android:layout_alignStart="@+id/button_2"
        android:layout_marginBottom="10dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_val_7"
        android:id="@+id/button_7"
        android:gravity="center"
        android:textSize="28sp"
        android:background="#fffffd09"
        android:textStyle="bold"
        android:clickable="true"
        android:onClick="button_7_click"
        android:visibility="visible"
        android:minHeight="55dp"
        android:maxHeight="55dp"
        android:maxWidth="55dp"
        android:minWidth="55dp"
        android:layout_alignTop="@+id/button_6"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignEnd="@+id/textView5"
        android:layout_marginBottom="10dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_card"
        android:id="@+id/button_pick_cd"
        android:clickable="true"
        android:onClick="pick_cd_click"
        android:visibility="visible"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_below="@+id/button_6"
        android:layout_alignLeft="@+id/button_6"
        android:layout_alignStart="@+id/button_6"
        android:enabled="true" />

</RelativeLayout>